--- a/sailbot_ws/src/sailbot/package.xml
+++ b/sailbot_ws/src/sailbot/package.xml
@@ -16,5 +16,10 @@
     <build_type>ament_python</build_type>
     <exec_depend>rclpy</exec_depend>
     <exec_depend>std_msgs</exec_depend>
+    <exec_depend>socket</exec_depend>
+    <exec_depend>json</exec_depend>
+    <exec_depend>enum</exec_depend>
+    <exec_depend>requests</exec_depend>
+    <exec_depend>serial</exec_depend>
   </export>
 </package>
