trying to fix import issue

--- a/sailbot_ws/src/sailbot/package.xml
+++ b/sailbot_ws/src/sailbot/package.xml
@@ -21,5 +21,7 @@
     <exec_depend>enum</exec_depend>
     <exec_depend>requests</exec_depend>
     <exec_depend>serial</exec_depend>
+    <exec_depend>smbus2</exec_depend>
+    <exec_depend>RPi.GPIO</exec_depend>
   </export>
 </package>
